[project]
name = "stock-stabilization"
version = "0.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kdata",
    "pandas>=3.0.0",
    "tradingpattern",
    "yfinance>=1.1.0",
]

[tool.uv.sources]
tradingpattern = { path = "libs/tradingpattern-0.2.7-py3-none-any.whl" }
kdata = { path = "libs/kdata-3.2.0-py3-none-any.whl" }
